--- a/style.css
+++ b/style.css
@@ -760,18 +760,21 @@
     .services-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
-        margin: 0 5rem;
+        margin-bottom: 3rem;
+    }
+    .skills h2{
+        margin-right: 200px;
     }
     .skill-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
-        margin:0 8rem;
+        /* margin:0 8rem; */
         text-align: center;
     }
     .work-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
-        margin: 0 5rem;
+        /* margin: 0 5rem; */
         text-align: center;
     }
 }
@@ -806,7 +809,7 @@
     .article-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
-        margin:0 9rem;
+        /* margin:0 9rem; */
         text-align: center;
     }
     .article-writeUp{
@@ -825,16 +828,7 @@
         flex-direction: column;
     }
 }
-@media(max-width:700px){
-    body{
-        max-width: 600;
-    }
-    .services-container{
-        padding-bottom: 7rem;
-        grid-template-columns: repeat(1,1fr);
-        margin-bottom: 5rem;
-    }
-}
+
    
     
 
