--- a/style.css
+++ b/style.css
@@ -763,7 +763,7 @@
         margin-bottom: 3rem;
     }
     .skills h2{
-        margin-right: 200px;
+        margin-right: 100px;
     }
     .skill-container{
         padding-bottom: 7rem;
@@ -776,6 +776,9 @@
         grid-template-columns: repeat(1,1fr);
         /* margin: 0 5rem; */
         text-align: center;
+    }
+    .Rating-info{
+        max-width: 600px;
     }
 }
 @media(max-width:991px){
