--- a/style.css
+++ b/style.css
@@ -758,7 +758,15 @@
         font-size: 70%;
     } */
     .Rating-info{
-        max-width: 100%;
+        max-width: 600px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(400px,1fr));
+        gap: 20px;
+        /* margin: 0 auto; */
+        padding: 2rem 2rem;
+    }
+    .Rating{
+        max-width: 600px;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(400px,1fr));
         gap: 20px;
