--- a/style.css
+++ b/style.css
@@ -757,24 +757,14 @@
     /* html{
         font-size: 70%;
     } */
-    body{
-        max-width: 500px;
-    }
-    .Rating-info{
-        max-width: 600px;
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(400px,1fr));
-        gap: 20px;
-        /* margin: 0 auto; */
-        padding: 2rem 2rem;
-    }
+
+
     .Rating{
         max-width: 600px;
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(400px,1fr));
+        grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
         gap: 20px;
-        /* margin: 0 auto; */
-        padding: 2rem 2rem;
+       
     }
     
     .services-container{
@@ -788,13 +778,11 @@
     .skill-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
-        /* margin:0 8rem; */
         text-align: center;
     }
     .work-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
-        /* margin: 0 5rem; */
         text-align: center;
     }
    
@@ -803,9 +791,7 @@
     section{
         padding: 2rem 3%;
     }
-    .Rating-info{
-        max-width: 600px;
-    }
+   
     .timeline-items::before{
         left: 7px;
     }
@@ -829,11 +815,17 @@
     .services{
         padding-bottom: 7rem;
     }
+    .Rating{
+        max-width: 600px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+        gap: 20px;
+       
+    }
 
     .article-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
-        /* margin:0 9rem; */
         text-align: center;
     }
     .article-writeUp{
@@ -845,11 +837,12 @@
         /* text-align: center; */
     }
     .hire-info p{
-        padding: 50px;
+        padding: 100px;
     }
     .contact{
         flex-wrap: wrap;
         flex-direction: column;
+        width: 500px;
     }
 }
 
