--- a/style.css
+++ b/style.css
@@ -759,7 +759,14 @@
     } */
 
 
-   
+    .Rating{
+        max-width: 600px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+        gap: 20px;
+        /* margin: 0 auto; */
+        /* padding: 2rem 2rem; */
+    }
     
     .services-container{
         padding-bottom: 7rem;
@@ -767,16 +774,18 @@
         margin-bottom: 3rem;
     }
     .skills h2{
-        margin-right: 50px;
+        margin-right: 100px;
     }
     .skill-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
+        /* margin:0 8rem; */
         text-align: center;
     }
     .work-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
+        /* margin: 0 5rem; */
         text-align: center;
     }
    
@@ -785,7 +794,9 @@
     section{
         padding: 2rem 3%;
     }
-   
+    .Rating-info{
+        max-width: 600px;
+    }
     .timeline-items::before{
         left: 7px;
     }
@@ -809,12 +820,19 @@
     .services{
         padding-bottom: 7rem;
     }
-   
+     .Rating{
+        max-width: 600px;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+        gap: 20px;
+        /* margin: 0 auto; */
+        /* padding: 2rem 2rem; */
     }
 
     .article-container{
         padding-bottom: 7rem;
         grid-template-columns: repeat(1,1fr);
+        /* margin:0 9rem; */
         text-align: center;
     }
     .article-writeUp{
@@ -823,6 +841,7 @@
     }
     .article-writeUp p{
         width: 200px;
+        /* text-align: center; */
     }
     .hire-info p{
         padding: 50px;
@@ -830,9 +849,8 @@
     .contact{
         flex-wrap: wrap;
         flex-direction: column;
-        
     }
-
+}
 
    
     
